examples/type_system/failing/47_main_with_parameters.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E411: main cannot declare parameters.

fn main(x: Int) {
    x
}
